# open-rdg-api-mcp

./: .gitignore  README.md  pyproject.toml
api/: README.md  data_processor.py  server.py
fetch/: download_data.py
mcp/: server.py
tests/: test_api.py  test_new_api.py
