[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-rdg-api-mcp"
version = "0.1.0"
description = "USDA Rural Data Gateway data fetcher with API and MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uv>=0.1.0",
    "playwright==1.40.0",
    "pandas==2.1.4",
    "uvicorn==0.24.0",
    "pydantic>=2.5.0",
    "fastapi>=0.104.1",
    "httpx>=0.25.2",
    "fastmcp>=0.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fetch*", "api*", "mcp*", "tests*"]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
]
[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"